--- a/app/src/main/res/layout/activity_text_mod.xml
+++ b/app/src/main/res/layout/activity_text_mod.xml
@@ -65,8 +65,8 @@
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Sour Grapes"
-            android:id="@+id/grapes_button"
+            android:text="Clear"
+            android:id="@+id/clear_button"
             android:textSize="20sp"
             android:textColor="@color/button_text_color"
             android:background="@color/button_color" />
